--- a/index.html
+++ b/index.html
@@ -33,31 +33,30 @@
     </section>
 
     <section class="card__details">
-      <!-- <div class="form__message">
+      <div class="form__message hidden">
         <img class="form__message__img" src="./images/icon-complete.svg" alt="" />
         <h2 class="form__message__h2">Thank You!</h2>
         <p class="form__message__p">We've added your card details</p>
         <button class="form-btn form__message__btn">Continue</button>
-      </div> -->
+      </div>
 
       <form action="" id="" class="form"> 
         
         <label for="cardholder-name">Cardholder name</label>
-        <input id="cardholder-name" type="text" placeholder="e.g. jane Appleseed" required />
+        <input  id="cardholder-name" type="text" placeholder="e.g. Jane Appleseed" required />
 
         <label for="card-number">card number</label>
-        <input id="card-number type=" text" placeholder="e.g.1234 5678 9123
-          0000" required inputmode="numeric" minlength="12" maxlength="12">  
+        <input id="card-number" type=" text" placeholder="e.g. 1234 5678 9123 0000" required inputmode="numeric" minlength="12" maxlength="12">  
         <div>
           <div>
-            <label for="exp-date">exp.date </label>
-            <input id="exp-date" type="text" placeholder="MM" required inputmode="numeric" minlength="2"
+            <label for="month">exp.date </label>
+            <input id="month" type="text" placeholder="MM" required inputmode="numeric" minlength="2"
               maxlength="2" />
           </div>
 
           <div>
-            <label for="month">(mm/yy)</label>
-            <input id="month" type="text" placeholder="YY" required inputmode="numeric" minlength="2" maxlength="2" />
+            <label for="year">(mm/yy)</label>
+            <input id="year" type="text" placeholder="YY" required inputmode="numeric" minlength="2" maxlength="2" />
           </div>
 
           <div>
@@ -70,6 +69,7 @@
       </form>
     </section>
   </main>
+  <script src="script.js"></script>
 </body>
 
 </html>
